force-app/main/default/objects/AgriEdge_Inventory__c/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <label>Warehouse Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>