force-app/main/default/objects/AgriEdge_Inventory__c/validationRules/Inventory_Record_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_Record_Alert</fullName>
    <active>true</active>
    <errorConditionFormula>Stock_Quantity__c  &lt;=  Reorder_Level__c</errorConditionFormula>
    <errorMessage>Stock is below reorder level. Please restock.</errorMessage>
</ValidationRule>